kafka-cluster/cluster-with-oauth/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-metrics
  namespace: kafka-cluster
spec:
  selector:
    strimzi.io/name: my-cluster
    strimzi.io/kind: Kafka
    strimzi.io/component-type: my-cluster-kafka
  ports:
    - name: metrics
      port: 9404
      targetPort: tcp-prometheus
